--- a/guides/source/index.erb.textile
+++ b/guides/source/index.erb.textile
@@ -3,7 +3,7 @@ h2. Ubiquo guides
 
 These are Edge Guides, based on the current master <a href="http://github.com/gnuine/ubiquo_core/tree/master">branch</a>.
 
-If you are looking for the ones for the stable version please check <a href="http://guides.ubiquo.me/0.7-stable">0.7-stable guides</a> instead.
+If you are looking for the ones for the stable version please check <a href="http://guides.ubiquo.me/0.8-stable">0.8-stable guides</a> instead.
 These guides are designed to make you immediately productive with Ubiquo, and to help you understand how all of the pieces fit together.
 
 <% end %>
@@ -118,3 +118,7 @@ h3. Upgrades
   This guide covers the procedure to upgrade older ubiquo based apps to use Rails 2.3.11
 <% end %>
 </dl>
+
+h3. Legacy ubiquo guides
+
+* <a href="http://guides.ubiquo.me/0.7-stable">0.7-stable guides</a>
