--- a/guides/source/index.erb.textile
+++ b/guides/source/index.erb.textile
@@ -89,6 +89,10 @@ h3. For ubiquo developers
 
 <dl>
 
+<% guide("Ubiquo connectors", 'connectors.html', :rdoc => false) do %>
+   This guide explains the basics about Ubiquo connectors and uhooks.
+<% end %>
+
 <% guide("How to update ubiquo guides and rdocs", 'ubiquo_documentation.html', :rdoc => false) do %>
    This guide covers the process needed to update and publish the ubiquo guides and rdoc.
 <% end %>
