--- a/guides/source/ubiquo_configuration.textile
+++ b/guides/source/ubiquo_configuration.textile
@@ -6,7 +6,153 @@ Most of the configuration options are set up in the +config/initializers/ubiquo_
 
 endprologue.
 
-h3. Ubiquo Core
+h3. Settings schema
+
+In current version we can differenciate two kinds of configuration values or settings:
+
+* Static
+
+Defined in development, cannot be changed on runtime. Usually these are values that
+configure how ubiquo works or basic values required by the application to work.
+
+* Dynamic
+
+Defined in development and also swappable on runtime.
+This are the ones that configure how some tasks are done in the application, or where to
+send some of the results. Should be used with safe default values.
+
+h4. Class Diagram
+
+In this diagram we can see how is the structure including the backend that allows changes on runtime
+
+!images/ubiquo_configuration/settings_models.png(Class diagram)!
+
+h4. Sample configuration
+
+You may have an initializer similar to:
+<ruby>
+  Settings.create_context(:application) do |settings|
+    # not editable in runtime, not displayed in web backend
+    settings.string   :default_post_title, "My title"
+
+    # this values can be changed on runtime
+    settings.string   :default_comment_title, "My customizable title", :is_editable => true
+
+    # this values can also be changed on runtime
+    # clear syntax to define more than one setting
+    settings.with_options :is_editable => true do |editable_settings|
+      editable_settings.integer  :default_award_amount, 30
+      editable_settings.boolean  :allow_awards, false
+      editable_settings.email    :admin_email, "alerts@ubiquo.me"
+      editable_settings.password :google_sites_secret, "BGDFG$$DAA"
+
+      editable_settings.string :registry_email,
+                       "<p>My Complex text</p>",
+                       { :is_text => true }
+
+      # multilanguage setting
+      # pending translation for english
+      editable_settings.email  :alert_email,
+                       {
+                         :es => 'alertas@ubiquo.me',
+                         :ca => 'alertes@ubiquo.me'
+                       },
+                       { :is_translatable => true }
+
+      # value restricted setting
+      editable_settings.string  :z_default_license,
+                       "apache",
+                       { :allowed_values => %w{apache gpl bsd mit} }
+
+      # multivalued and restricted setting
+      editable_settings.list  :browsers,
+                       %w{chrome chromium firefox opera},
+                       { :allowed_values => %w{chrome chromium opera firefox internet-explorer} }
+
+      # group of translatable settings of type string that can also be
+      # changed on runtime
+      my_options = {:is_translatable => true, :value_type => UbiquoStringSetting}
+      editable_settings.with_options(my_options) do |translatable_settings|
+        translatable_settings.add(:another_email,
+                         {
+                           :es => 'otro@ubiquo.me',
+                           :ca => 'altre@ubiquo.me'
+                         })
+        translatable_settings.add(:another_string_setting, { :es => 'es_string' })
+      end
+    end
+  end
+</ruby>
+
+h4. Customizing web interface
+
+You have three methods to override the partial used to render a setting control.
+
+During each template rendering you will have available the specific UbiquoSetting instance as a local value named *ubiquo_setting*
+
+* For a specific setting
+
+<ruby>
+"#{Rails.root}/app/views/ubiquo/ubiquo_settings/#{context_name}/#{setting_key}.html.erb"
+</ruby>
+
+* For a specific setting type
+
+<ruby>
+"#{Rails.root}/app/views/ubiquo/ubiquo_settings/#{setting_type}.html.erb"
+</ruby>
+
+<ruby>
+"#{Rails.root}/app/views/ubiquo/ubiquo_settings/_string.html.erb"
+</ruby>
+
+* Using standard rails templates overloading
+
+<ruby>
+"#{Rails.root}/app/views/ubiquo/ubiquo_settings/#{setting_type}.html.erb"
+</ruby>
+
+You can override every of the templates presents at vendor/plugins/ubiquo_core/app/ubiquo/ubiquo_settings/
+
+CAUTION:If no valid partial can be found for a setting, a error will be raised on runtime
+
+h3. For end-users
+
+If settings override has been enabled in development, end users will have available
+a web interface to edit each setting.
+
+h4. Permission
+
+A permission key _media_management_ has been created to restrict the access to this functionality to some users.
+You can customize this permission management as usually in ubiquo plugin with a access_controller setting:
+
+<ruby>
+:ubiquo_settings_access_control
+</ruby>
+
+h4. Web interface
+
+User will have available a interface similar to other ubiquo scaffold's where will be able to stablish a value for every setting allowed
+
+!images/ubiquo_configuration/settings_web_interface.png(Example)!
+
+In this interface you are able to:
+
+* Update a specific setting
+* Update all avaiable settings
+* Restore a setting to the default value stablished by developers
+* Translate a value to the current locale
+
+h4. More Information
+
+This refactoring was done according to the discussion that was taken here:
+
+"Ubiquo Google group":http://groups.google.com/group/ubiquo-gnuine/browse_thread/thread/27c173b00c3f0875/9fe9d13aa14904f1
+
+
+h3. Settings list
+
+h4. Ubiquo Core
 
 Most main Ubiquo configuration parameters have no context.
 
@@ -24,7 +170,7 @@ Most main Ubiquo configuration parameters have no context.
 | ubiquo_path                   | Default path for ubiquo section                                      | +'ubiquo'+ |
 | edit_on_row_click             | Select the behaviour of ubiquo list actions (old or new)             | +true+ |
 
-h4. +ubiquo_form_builder+ options
+h5. +ubiquo_form_builder+ options
 
 There's a special context for options regarding the Ubiquo Form Builder. It's called +:ubiquo_form_builder+ and has this options:
 
@@ -34,7 +180,7 @@ There's a special context for options regarding the Ubiquo Form Builder. It's ca
 | default_group_type            | Sets the default html tag to use for grouping inputs when using ubiquo form builder | +:div+ |
 | unfold_tabs                   | Allows you to set the ubiquo form builder tabs to be folded or unfolded when using the ubiquo form builder | +false+ |
 
-h3. Ubiquo Access Control
+h4. Ubiquo Access Control
 
 Ubiquo Access Control settings are stored under the +:ubiquo_access_control+ context.
 
@@ -45,7 +191,7 @@ Ubiquo Access Control settings are stored under the +:ubiquo_access_control+ con
 | roles_default_order_field | default order field for the role list                         | +id+ |
 | roles_default_sort_order  | default sort order for the role list                          | +'desc'+ |
 
-h3. Ubiquo Activity
+h4. Ubiquo Activity
 
 Ubiquo Activity settings are stored under the +:ubiquo_activity+ context.
 
@@ -62,7 +208,7 @@ Ubiquo Activity settings are stored under the +:ubiquo_activity+ context.
 | activities_default_sort_order  | Default sort order for the activity listings                      | +'desc'+ |
 | info_list_partial              | Partial view to use for the activity list rendering               | +'standard'+ |
 
-h3. Ubiquo Authentication
+h4. Ubiquo Authentication
 
 Ubiquo Authentication settings are stored under the +:ubiquo_authentication+ context.
 
@@ -76,7 +222,7 @@ Ubiquo Authentication settings are stored under the +:ubiquo_authentication+ con
 | ubiquo_users_default_order_field   | Default field to order the user listings                          | +'ubiquo_users.id'+ |
 | ubiquo_users_default_sort_order    | Default sort order for the user listings                          | +'desc'+ |
 
-h3. Ubiquo Categories
+h4. Ubiquo Categories
 
 Ubiquo Categories settings are stored under the +:ubiquo_categories+ context.
 
@@ -90,7 +236,7 @@ Ubiquo Categories settings are stored under the +:ubiquo_categories+ context.
 | available_connectors               | List of connectors to use in the plugin                           | +[:i18n, :standard]+ |
 | connector                          | Default connector                                                 | +:standard+ |
 
-h3. Ubiquo Design
+h4. Ubiquo Design
 
 Ubiquo Design settings are stored under the +:ubiquo_design+ context.
 
@@ -111,7 +257,7 @@ Ubiquo Design settings are stored under the +:ubiquo_design+ context.
 | generic_models                     | Models to select for generic widgets                              | +[]+ |
 | block_type_for_static_section_widget | The block type for the static widgets                           | Not set |
 
-h3. Ubiquo I18n
+h4. Ubiquo I18n
 
 Ubiquo I18n settings are stored under the +:ubiquo_i18n+ context.
 
@@ -122,7 +268,7 @@ Ubiquo I18n settings are stored under the +:ubiquo_i18n+ context.
 | last_user_locale                   | Used to get the last user locale                                  | Will get the locale of the current user, nil if there is none |
 | set_last_user_locale               | Used to set the last user locale                                  | Will update the current user locale to the given +:locale+ as an option |
 
-h3. Ubiquo Jobs
+h4. Ubiquo Jobs
 
 Ubiquo Jobs settings are stored under the +:ubiquo_jobs+ context.
 
@@ -130,7 +276,7 @@ Ubiquo Jobs settings are stored under the +:ubiquo_jobs+ context.
 | job_manager_class                  | Default manager to handle jobs                                    | +UbiquoJobs::Managers::ActiveManager+ |
 | job_notifier_class                 | Default manager to handle job notifications                       | +UbiquoJobs::Helpers::Notifier+ |
 
-h3. Ubiquo Media
+h4. Ubiquo Media
 
 Ubiquo Media settings are stored under the +:ubiquo_media+ context.
 
