--- a/guides/source/ubiquo_core.textile
+++ b/guides/source/ubiquo_core.textile
@@ -3,7 +3,7 @@ h2. Ubiquo Core
 This plugin contains the basic common Ubiquo structure so that other
 plugins can be built on top of it. This includes:
 
-* Ubiquo::Config system
+* Settings system
 * Core helpers
 * Ubiquo layout and styling elements
 * Custom FormBuilder
@@ -17,43 +17,50 @@ plugins can be built on top of it. This includes:
 
 endprologue.
 
-h3. Using configuration
+h3. Settings
 
-Ubiquo::Config offers a place where store configuration variables
+Settings offers a place where store configuration variables
 
-A value can have 2 states, added as default value and added as normal
-value. If both setted, normal value is used.
-
-It allow to store values in contexts using _context_ method.
-
-NOTE: It's not recommended to change the value of the configuration during the life of the application, only in the setup
+It allows the agrupation of values in contexts using _context_ method.
 
 h4. Getting a value
 
 To get a stored value of the configuration.
 
 <ruby>
-value = Ubiquo::Config.get(:key)
-contexted_value = Ubiquo::Config.context(:context).get(:key)
+value = Settings[:key]
+value = Settings.key
+
+contexted_value = Settings[:context][:key]
+contexted_value = Settings[:context].key
 </ruby>
 
-h4. Creating a new value
+h4. Creating a new normal value
 
-You can create new values for the configuration.
+You can create new values for the setting. Before accesing a setting, its required to register it with _add_ or the type specific methods we will cover later.
 
 <ruby>
-Ubiquo::Config.add(:key, 'default_value')
-Ubiquo::Config.context(:context).add(:key, default_value)
+Settings.add(:key, 'default_value')
+Settings.context(:context).add(:key, default_value)
 </ruby>
+
+Or using the extended format, specifically intented to allow runtime modifications
+
+<ruby>
+Settings.string(:default_comment_title, "My title")
+</ruby>
+
 
 h4. Setting a normal value
 
-when a key is added you can override their default value with _set_
+when a key is added you can override its value assigning another or using with _set_
 method:
 
 <ruby>
-Ubiquo::Config.set(:key, 'normal_value')
-Ubiquo::Config.context(:context).set(:key, normal_value)
+Settings[:context][:key] = normal_value
+
+Settings.set(:key, 'normal_value')
+Settings[:context].set(:key, normal_value)
 </ruby>
 
 h4. Inherited values
@@ -65,8 +72,8 @@ Currently is used to the plugins lists max row number, default to 10
 but can be re-setted for a single list.
 
 <ruby>
-Ubiquo::Config.add_inheritance(:key, :existent_key)
-Ubiquo::Config.context(:context).add_inheritance(:key, :existent_key)
+Settings.add_inheritance(:key, :existent_key)
+Settings[:context].add_inheritance(:key, :existent_key)
 </ruby>
 
 h4. Use of config caller
@@ -82,6 +89,24 @@ you to change it in your application without changing plugin code.
 <ruby>
 ubiquo_config_call(:key)
 ubiquo_config_call(:key, {:context => :context})
+</ruby>
+
+h4. Runtime changes to settings
+
+Settings can be configured to allow them to be changed by end-users on runtime.
+To achieve this goal, a set of connectors has been stablished to keep settings
+persistent on a database backend.
+
+You need to satisfy two requirements:
+
+* Enabled the override mechanisms:
+<ruby>
+  Settings[:settings_overridable] = true
+</ruby>
+
+* And provide some settings:
+<ruby>
+  Settings.string(:default_comment_title, "My customizable title", :is_editable => true)
 </ruby>
 
 h3. Core helpers
@@ -174,13 +199,13 @@ but with UbiquoFormBuilder we write this:
 As you can see the form gets more "right to the point", and the code is far less verbose.
 
 The usual methods for the form like text_field, text_area, media_selector, etc.,
-are enriched with a wrapper and a label with the name of the field. All of them 
+are enriched with a wrapper and a label with the name of the field. All of them
 generate the right html to be rendered correctly in the Ubiquo side.
 
 These methods accept the following options aside the usual ones for them:
  * _translatable_ : when true shows that this field is translatable.
- * _description_ : a text that will be appended to the field to add extra 
-information. 
+ * _description_ : a text that will be appended to the field to add extra
+information.
  * _help_: will show a tooltip when clicking on an icon to see extra information.
  * _label_: in case you want to show another label and not the one of the attribute
  * _group_: options for the group. When false, no group wraps the field. It can
@@ -219,7 +244,7 @@ h6. Example 2: grouping various selectors in a fieldset and disable its owns fie
 h6. Example 3: forwarding options to the inside generators like label or fieldsets
 
 <ruby>
-<%= form.category_selector :tags, 
+<%= form.category_selector :tags,
   :group => {:class => “tags”},
   :label => {:text => t(“ubiquo.tags”)}
 %>
@@ -306,7 +331,7 @@ The usage is really easy:
 <% end %>
 </ruby>
 
-Don't forget to wrap the tabs inside a tabbed from group. Otherways the builder 
+Don't forget to wrap the tabs inside a tabbed from group. Otherways the builder
 could not guess where this tab belongs to.
 
 TIP: Anytime you need to unfold a group of tabs, it's as easy as change the type of the wrapper group from :tabbed to :div or :fieldset.
